.devcontainer/k8s/01-db.yaml
apiVersion: v1
kind: Service
metadata:
  name: mongodb-service
spec:
  selector:
    app: crappital-mongo
  ports:
    - protocol: TCP
      port: 27017
      targetPort: 27017
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: crappital-mongo-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: crappital-mongo
  template:
    metadata:
      labels:
        app: crappital-mongo
    spec:
      containers:
        - name: mongodb
          image: crappital-mongo:latest
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 27017
          volumeMounts:
            - name: mongodb-storage
              mountPath: /data/db
      volumes:
        - name: mongodb-storage
          persistentVolumeClaim:
            claimName: mongodb-pvc
