.devcontainer/k8s/03-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: crappital-ingress
  annotations:
    kubernetes.io/ingress.class: "nginx"
spec:
  rules:
  - http:
      paths:
      - path: /core
        pathType: Prefix
        backend:
          service:
            name: crappital-server-service 
            port:
              number: 5000
      - path: /api-docs
        pathType: Prefix
        backend:
          service:
            name: crappital-server-service
            port:
              number: 5000
      - path: /openapi.json
        pathType: Prefix
        backend:
          service:
            name: crappital-server-service
            port:
              number: 5000
      - path: /metrics
        pathType: Prefix
        backend:
          service:
            name: crappital-server-service
            port:
              number: 5000
      - path: /
        pathType: Prefix
        backend:
          service:
            name: crappital-client-service
            port:
              number: 80
